--- a/index.html
+++ b/index.html
@@ -45,16 +45,7 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
-    <script>
-
-        function calcularOperacao(v) {
-            const operacao = eval($("#valor1").val() + `${v}` + $("#valor2").val());
-            $("#total").text("Total:" + operacao);
-        }
-
-
-    </script>
-
+    <script src="operadores.js" type="text/javascript" crossorigin="anonymous"></script>
 </body>
 
 </html>
